--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,27 +1,78 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    signingConfigs {
+        debug {
+            storeFile file('D:\\mycode\\android\\SuperLocator\\key.jks')
+            storePassword 'shanshanlaichi'
+            keyPassword 'shanshanlaichi'
+            keyAlias = 'superLocator'
+        }
+        release {
+            storeFile file('D:\\mycode\\android\\SuperLocator\\key.jks')
+            storePassword 'shanshanlaichi'
+            keyPassword 'shanshanlaichi'
+            keyAlias = 'superLocator'
+        }
+    }
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.seagle.superlocator"
         minSdkVersion 16
-        targetSdkVersion 28
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+//        signingConfigs {
+//            debug{
+//                storeFile file("../key.jks")
+//                storePassword "xxx"
+//                keyAlias "xxx"
+//                keyPassword "xxx"
+//            }
+//            release {
+//                storeFile file("../key.jks")
+//                storePassword "xxx"
+//                keyAlias "xxx"
+//                keyPassword "xxx"
+//            }
+//        }
     }
     buildTypes {
+//        debug {
+//            signingConfig signingConfigs.release
+//        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+//            signingConfig signingConfigs.release
         }
     }
+    buildToolsVersion = '27.0.3'
 }
+
+//configurations.all {
+//    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+//        def requested = details.requested
+//        if (requested.group == "com.android.support") {
+//            if (!requested.name.startsWith("multidex")) {
+//                details.useVersion "27.+"
+//            }
+//        }
+//    }
+//}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    implementation 'com.android.support:appcompat-v7:27.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+//    implementation 'androidx.appcompat:appcompat:1.0.2'
+//    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.amap.api:3dmap:6.9.2'
+    implementation 'com.amap.api:location:4.7.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
