--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,10 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+//        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        ndk {
+            abiFilters "armeabi-v7a"
+        }
 
     }
     buildTypes {
@@ -31,6 +34,16 @@ android {
         }
     }
     buildToolsVersion = '29.0.1'
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+//
+//    packagingOptions {
+//        exclude "**/libAMapSDK_MAP_v6_9_2.so"
+//    }
 }
 
 //configurations.all {
@@ -46,18 +59,29 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(':lib')
 
-    implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-//    implementation 'androidx.appcompat:appcompat:1.0.2'
-//    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.android.support:multidex:1.0.2'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
 
-    implementation "org.permissionsdispatcher:permissionsdispatcher:4.5.0"
-    annotationProcessor "org.permissionsdispatcher:permissionsdispatcher-processor:4.5.0"
+//    implementation "org.permissionsdispatcher:permissionsdispatcher:4.5.0"
+//    annotationProcessor "org.permissionsdispatcher:permissionsdispatcher-processor:4.5.0"
+
+    compile("com.github.hotchemi:permissionsdispatcher:3.3.2") {
+        // if you don't use android.app.Fragment you can exclude support for them
+        exclude module: "support-v13"
+    }
+    annotationProcessor "com.github.hotchemi:permissionsdispatcher-processor:3.3.2"
     implementation 'com.amap.api:3dmap:6.9.2'
     implementation 'com.amap.api:location:4.7.0'
+    implementation 'com.jonathanfinerty.once:once:1.0.3'
+    implementation 'org.jdeferred:jdeferred-android-aar:1.2.4'
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+//    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
